--- a/ExViewer/Controls/GalleryViewer.xaml
+++ b/ExViewer/Controls/GalleryViewer.xaml
@@ -1,5 +1,6 @@
 ﻿<UserControl x:Class="ExViewer.Controls.GalleryViewer"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:ani="using:Microsoft.Toolkit.Uwp.UI.Animations"
              xmlns:rs3="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract,5)"
              xmlns:prers3="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractNotPresent(Windows.Foundation.UniversalApiContract,5)"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -12,6 +13,7 @@
              d:DesignWidth="500"
              IsTabStop="False"
              UseSystemFocusVisuals="False"
+             Background="Transparent"
              AutomationProperties.LabeledBy="{x:Bind TitleTextBlock}">
   <UserControl.Resources>
     <Style x:Key="DetailTextBlockStyle"
